--- a/src/public/index.html
+++ b/src/public/index.html
@@ -74,7 +74,7 @@
     <script src="https://code.jquery.com/jquery-3.6.3.min.js"
         integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script>
     <script src="socket.io/socket.io.js"></script>
-    <script src="js/main2.js"></script>
+    <script src="js/main.js"></script>
 </body>
 
 </html>
